src/objects/vlocity_ins__CalculationMatrixColumn__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_ins__CalculationMatrixVersionId__c</fullName>
        <label>Vlocity Calculation Matrix Version</label>
        <referenceTo>vlocity_ins__CalculationMatrixVersion__c</referenceTo>
        <relationshipLabel>Vlocity Calculation Matrix Columns</relationshipLabel>
        <relationshipName>VlocityCalculationMatrixColumns</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DataType__c</fullName>
        <label>Data Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Currency</fullName>
                </value>
                <value>
                    <fullName>Percent</fullName>
                </value>
                <value>
                    <fullName>Boolean</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__DisplayOrder__c</fullName>
        <label>Display Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__GlobalKey__c</fullName>
        <label>Global Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RowFieldName__c</fullName>
        <label>Row Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RowHighRangeFieldName__c</fullName>
        <label>Row High Range Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Usage__c</fullName>
        <label>Usage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Input</fullName>
                </value>
                <value>
                    <fullName>Output</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Vlocity Calculation Matrix Column</label>
    <nameField>
        <label>Vlocity Calculation Matrix Column Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Calculation Matrix Columns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>